[package]
name = "custom-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"  # Encryption
serde = { version = "1.0", features = ["derive"] }     # A generic serialization/deserialization framework
bincode = "1.3"   # A binary serialization / deserialization strateg
rand = "0.8"      # Random number generation
