[package]
name = "custom-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"  # Encryption
serde = { version = "1.0", features = ["derive"] }     # A generic serialization/deserialization framework
bincode = "1.3"   # A binary serialization / deserialization strateg
rand = "0.8"      # Random number generation
tokio = { version = "1.41", features = ["full"] }  # An event-driven, non-blocking I/O
env_logger = "0.11"
futures = "0.3"
thiserror = "2.0"
log = "0.4"
